SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <description>개체 테스트</description>
    <label>게임</label>
    <nameField>
        <label>게임 타이틀</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>