SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/fields/Genrel__c.field-meta.xml
<CustomField>
    <fullName>Genrel__c</fullName>
    <description>RTS \n
RPG \n
FPS \n
액션</description>
    <label>장르</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RTS</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>RPG</fullName>
            </value>
            <value>
                <fullName>액션</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>