SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/fields/ProductionCompany__c.field-meta.xml
<CustomField>
    <fullName>ProductionCompany__c</fullName>
    <label>제작회사</label>
    <length>80</length>
    <type>Text</type>
</CustomField>