SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <label>출시일</label>
    <type>Date</type>
</CustomField>