SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/fields/ServiceQuit__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuit__c</fullName>
    <label>서비스종료일</label>
    <type>Date</type>
</CustomField>