SAMPLE_ACCOUNT_FOR_SALESFORCE/force-app/main/default/objects/Game__c/validationRules/Test_Rule002.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Rule002</fullName>
    <active>true</active>
    <description>Validation Rule 테스트 생성</description>
    <errorConditionFormula>ServiceQuit__c &gt; DATE(2021,12,01)</errorConditionFormula>
    <errorMessage>ERROR !</errorMessage>
</ValidationRule>